# VapourSynth-EEDI2CUDA

./: .gitignore  CMakeLists.txt  EEDI2.cu  README.md  avs+.cu  common.h  config.h.in  eedi2.cuh  instance.h  pipeline.h  utils.cuh  vs3.cu  vs4.cu
.github/workflows/: build.yml
